--- a/src/app/kvm/components/LXDVMsSummaryCard/_index.scss
+++ b/src/app/kvm/components/LXDVMsSummaryCard/_index.scss
@@ -1,7 +1,6 @@
 @mixin LXDVMsSummaryCard {
   .lxd-vms-summary-card {
     @extend %vf-is-bordered;
-    @extend %vf-bg--x-light;
     display: grid;
     grid-template-areas:
       "ram ram ram ram"
