--- a/src/scss/_vanilla-overrides.scss
+++ b/src/scss/_vanilla-overrides.scss
@@ -54,8 +54,8 @@ body {
 
 body.is-dark {
   
-  .p-button--link {
-    color: var(--vf-color-text--default)
+  .p-button--link.p-button--table-header {
+    color: var(--vf-color-text-default)
   }
 
   a:visited:not([class]), a.p-link__chevron, a[class=""]:visited {
